<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_monday"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/monday" />
        <item
            android:id="@+id/nav_tuesday"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/tuesday" />
        <item
            android:id="@+id/nav_wednesday"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/wednesday" />
        <item
            android:id="@+id/nav_thursday"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/thursday" />
        <item
            android:id="@+id/nav_friday"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/friday" />
    </group>

</menu>
